fixed overflow issue on train table on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,3 +36,7 @@ form {
 .updateFormRow {
 	display: none;
 }
+
+.panel {
+	overflow: auto;
+}
